5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1601_2425.log
== TEST (2019-04-07 16:35:16) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 16:35:30) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3))
-- EXECUTION TIME:
0.140929
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:35:52) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3"km/l"))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:38:53) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)string"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)string"km/l")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:38:58) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)string"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)string"km/l")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:39:46) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3))string"km/l"
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3))string"km/l"
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:40:28) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3km/l))
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3km/l))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:40:53) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3"km/l"))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:43:31) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(string"km/l"(round(consumo, 3)))
-- ERROR:
File "XXXX", line 4
    print(string"km/l"(round(consumo, 3)))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:43:46) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(str"km/l"(round(consumo, 3)))
-- ERROR:
File "XXXX", line 4
    print(str"km/l"(round(consumo, 3)))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:55:57) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print((round(consumo, 3).str"km/l"))

-- ERROR:
File "XXXX", line 4
    print((round(consumo, 3).str"km/l"))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:56:38) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3."km/l"))

-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3."km/l"))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:56:46) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3."km/l"))

-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3."km/l"))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:00:35) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3.(km/l))

-- ERROR:
File "XXXX", line 5
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:01:00) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3.(km/l)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3.(km/l)))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:06:05) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round.str"km/l"(consumo, 3))
-- ERROR:
File "XXXX", line 4
    print(round.str"km/l"(consumo, 3))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:06:16) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round."km/l"(consumo, 3))
-- ERROR:
File "XXXX", line 4
    print(round."km/l"(consumo, 3))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:16:14) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)km/l)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)km/l)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:16:31) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)(km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3)(km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:17:18) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo.str"km/l", 3))
-- ERROR:
File "XXXX", line 4
    print(round(consumo.str"km/l", 3))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:17:25) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo."km/l", 3))
-- ERROR:
File "XXXX", line 4
    print(round(consumo."km/l", 3))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:18:05) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 "km/l"))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:18:18) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 km/l))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:21:27) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round \"km/l\"."(consumo, 3 ))
-- ERROR:
File "XXXX", line 4
    print(round \"km/l\"."(consumo, 3 ))
                                       ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:21:42) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round \"km/l"\(consumo, 3 ))
-- ERROR:
File "XXXX", line 4
    print(round \"km/l"\(consumo, 3 ))
                                     ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:21:51) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round \km/l\(consumo, 3 ))
-- ERROR:
File "XXXX", line 4
    print(round \km/l\(consumo, 3 ))
                                   ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:29:13) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(string"km/l"(round(consumo, 3 ))
-- ERROR:
File "XXXX", line 4
    print(string"km/l"(round(consumo, 3 ))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:29:27) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(string"km/l"(round(consumo, 3 )))
-- ERROR:
File "XXXX", line 4
    print(string"km/l"(round(consumo, 3 )))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:29:41) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(str"km/l"(round(consumo, 3 )))
-- ERROR:
File "XXXX", line 4
    print(str"km/l"(round(consumo, 3 )))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:30:38) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 )str"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 )str"km/l")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:30:52) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 )str"km/l".)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 )str"km/l".)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:31:00) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 ) str "km/l".)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 ) str "km/l".)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:32:57) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print.str "km/l"(round(consumo, 3 )) 
-- ERROR:
File "XXXX", line 4
    print.str "km/l"(round(consumo, 3 )) 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:33:18) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 )) str "km/l"
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 )) str "km/l"
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:48:52) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3 + str"km/l" )) 
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3 + str"km/l" )) 
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:49:21) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)+ str"km/l") 
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)+ str"km/l") 
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:49:33) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3) + str"km/l") 
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3) + str"km/l") 
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:50:32) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)) 
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:56:05) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)"km/l") 
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)"km/l") 
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:59:03) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)"km/l") 
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)"km/l") 
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 09:02:09) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3)"km/l") 
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3)"km/l") 
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 09:27:11) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round("%sKM/L",consumo, 3)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("%sKM/L",consumo, 3)) 
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 09:30:36) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round("%sKM/L",consumo, 3)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("%sKM/L",consumo, 3)) 
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 09:43:04) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round("%sKM/L",consumo, 3)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("%sKM/L",consumo, 3)) 
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:27:19) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round("%sKM/L",consumo, 3)) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("%sKM/L",consumo, 3)) 
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 16:28:28) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3), "km/l") 

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 16:29:13) 
-- CODE:
dist = float(input("digite distancia"))
comb = float(input("digite combustivel"))
consumo = dist/comb
print(round(consumo, 3), "km/l") 

-- EXECUTION TIME:
0.21862
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
